[package]
name = "git-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"
regex = "1.5"
chatgpt_rs = "1.2.3"
tokio = { version = "1", features = ["full"] }